--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 					<form role="form">
 						<div class="form-group">
 						 	<label for="Name">Name</label>
-							<input type="email" class="form-control" id="exampleName" placeholder="Enter Name">
+							<input type="text" class="form-control" id="exampleName" placeholder="Enter Name">
 						  </div>
 
 						<div class="form-group">
