Add LIRI to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -75,10 +75,10 @@
 
 					</div>
 					<div class="col-md-6">
-						<a href="" class="images">
-							<img class="tile" src="http://via.placeholder.com/350x250">
+						<a href="https://github.com/PriyaDoIT/liri-node-app" class="images">
+							<img class="tile" src="images/liri.png">
 						</a>
-						<p class="portfolio">Portfolio 6</p>
+						<p class="portfolio">LIRI</p>
 					</div>
 				</div>
 			</div>
