bupdate with bamazon

--- a/portfolio.html
+++ b/portfolio.html
@@ -86,14 +86,14 @@
 						<a href="https://priyadoit.github.io/week-4-game/" class="images">
 							<img class="tile" src="images/sports.png">
 						</a>
-						<p class="portfolio">Portfolio 8</p>
+						<p class="portfolio">Sports Collector</p>
 
 					</div>
 					<div class="col-md-6">
-						<a href="" class="images">
-							<img class="tile" >
+						<a href="https://github.com/PriyaDoIT/bamazon" class="images">
+							<img class="tile" src="images/bamazon.jpg" >
 						</a>
-						<p class="portfolio">Portfolio 8</p>
+						<p class="portfolio">Bamazon</p>
 
 					</div>
 				</div>
