--- a/portfolio.html
+++ b/portfolio.html
@@ -97,6 +97,23 @@
 
 					</div>
 				</div>
+				<div class="row portfolio">
+					<div class="col-md-6">
+						<a href="https://blooming-inlet-62142.herokuapp.com/" class="images">
+							<img class="tile" src="images/friend.png">
+						</a>
+						<p class="portfolio">Friend Finder</p>
+
+					</div>
+					<div class="col-md-6">
+						<a href="https://priyadoit.github.io/compostConnect/" class="images">
+							<img class="tile" src="images/compost.jpg" >
+						</a>
+						<p class="portfolio">Compost Connect</p>
+
+					</div>
+				</div>
+				
 				
 			</div>
 
